  
  * New upstream release.

  [ Pino Toscano ]
  * Fix typo in kompare's description. (Closes: #670199)

  [ José Manuel Santamaría Lema ]
  * Update build dependencies:
    - Bump kde-sc-dev-latest to 4:4.8.4.
    - Bump kdepimlibs5-dev to >= 4:4.8.
    - Bump libkonq5-dev to >= 4:4.8.
  * Update patches:
    - update dont_export_private_classes.diff.
  * Add watch file.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 24 Apr 2012 12:20:29 +0200

kdesdk (4:4.7.4-3) unstable; urgency=low

  * Team upload. Upload to unstable.
  * Update uploaders, remove Armin.

  [ José Manuel Santamaría Lema ]
  * Confirm symbols files on all architectures.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Wed, 07 Mar 2012 10:38:58 +0100

kdesdk (4:4.7.4-2) experimental; urgency=low

  * Add default-jre-headless to Build-Depends, thus we make sure that antlr
    will use the latest gcj (4.6 today) when building with sbuild configured to
    use the aptitude based resolver. Right now, this avoids an FTBFS on
    kfreebsd-amd64; this FTBFS happens because of gcj 4.4, which segfaults when
    executing antlr.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 28 Dec 2011 22:22:31 +0100

kdesdk (4:4.7.4-1) experimental; urgency=low

  * New upstream release.
  
  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest to 4:4.7.4.
  * Make this source package build properly with big endian architectures:
    - Add okteta_big_endian.diff to disable part of okteta funcionality
      (allegedly broken on big endian architectures).
    - Change debian/rules and some debian/*.install to install conditionally
      some files depending on the architecture endian-ness. These files are
      related to the allegedly broken functionality mentioned above.
  * Confirm symbols files on more architectures with the 4.7.2 build logs.

  [ Pino Toscano ]
  * Add DEP3 headers to patch append_kde.diff.
