@@ -12,6 +12,7 @@ kdesdk (4:4.8.4-0r0) UNRELEASED; urgency=low
     - Bump libkonq5-dev to >= 4:4.8.
   * Update patches:
     - update dont_export_private_classes.diff.
+    - refresh other patches to make them apply without any offset.
   * Add watch file.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 24 Apr 2012 12:20:29 +0200
